--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
         "@vitejs/plugin-vue": "^3.0.1",
-        "axios": "^0.27.2",
+        "axios": "^0.21.4",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.5.0",
@@ -16,15 +16,29 @@
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^12.1.0",
+        "tailwindcss": "^3.1.8",
         "vite": "^3.0.0",
-        "vue": "^3.2.37"
+        "vue-axios": "^3.4.1",
+        "vue": "^2.7.8",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "laravel-vue-pagination": "^3.0.0",
-        "sweetalert2": "^11.4.26",
-        "typescript": "^4.7.4",
-        "vue-loader": "^17.0.0",
-        "vue-router": "^4.1.3"
+        "@smartweb/vue-flash-message": "^0.6.10",
+        "firebase": "^9.8.0",
+        "laravel-vue-pagination": "^2.3.1",
+        "moment": "^2.29.1",
+        "sweetalert2": "^11.4.0",
+        "ts-loader": "^9.2.6",
+        "typescript": "^4.4.3",
+        "vform": "^2.1.1",
+        "vue-carousel": "^0.18.0",
+        "vue-infinite-loading": "^2.4.5",
+        "vue-moment": "^4.1.0",
+        "vue-moments-ago": "^0.2.0",
+        "vue-multiselect": "^2.1.6",
+        "vue-router": "^3.5.2",
+        "vue-sidebar-menu": "^4.8.1"
     },
     "name": "shop-stroka",
     "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\"></a></p>",
