--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "@popperjs/core": "^2.10.2",
         "@vitejs/plugin-vue": "^3.0.1",
         "axios": "^0.21.4",
-        "bootstrap": "^5.1.3",
+        "bootstrap": "^5.2.0",
         "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.5.0",
         "lodash": "^4.17.19",
@@ -18,13 +18,14 @@
         "sass-loader": "^12.1.0",
         "tailwindcss": "^3.1.8",
         "vite": "^3.0.0",
+        "vue": "^2.7.10",
         "vue-axios": "^3.4.1",
-        "vue": "^2.7.8",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
         "@smartweb/vue-flash-message": "^0.6.10",
+        "bootstrap-vue": "^2.22.0",
         "firebase": "^9.8.0",
         "laravel-vue-pagination": "^2.3.1",
         "moment": "^2.29.1",
