--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
-        "spatie/laravel-translatable": "^6.0"
+        "spatie/laravel-query-builder": "^5.0",
+        "spatie/laravel-searchable": "^1.11",
+        "spatie/laravel-translatable": "^6.0",
+        "torann/laravel-repository": "^0.6.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
