--- a/package.json
+++ b/package.json
@@ -6,21 +6,26 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
-        "@vitejs/plugin-vue": "^3.0.1",
+        "@tailwindcss/forms": "^0.4.0",
+        "@vitejs/plugin-vue": "^3.1.0",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^0.21.4",
         "bootstrap": "^5.2.0",
+        "laravel-echo": "^1.14.0",
         "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.5.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.6",
+        "pusher-js": "^7.4.0",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^12.1.0",
-        "tailwindcss": "^3.1.8",
+        "tailwindcss": "^3.0.18",
         "vite": "^3.0.0",
-        "vue": "^2.7.10",
+        "vue": "^3.2.36",
         "vue-axios": "^3.4.1",
-        "vue-loader": "^15.9.8",
+        "vue-loader": "^17.0.0",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
@@ -38,7 +43,7 @@
         "vue-moment": "^4.1.0",
         "vue-moments-ago": "^0.2.0",
         "vue-multiselect": "^2.1.6",
-        "vue-router": "^3.5.2",
+        "vue-router": "^4.0.13",
         "vue-sidebar-menu": "^4.8.1"
     },
     "name": "shop-stroka",
